@@ -154,7 +154,7 @@ setReplaceMethod(".svalue",
                      imageID <- findIcon(value)
                      tkconfigure(getWidget(obj),image=imageID)
                    } else if(file.exists(value)) {
-                    imageID <- sprintf("gWidgets::%s", value)
+                    imageID <- sprintf("gWidgets::%s", digest(value))
                     x = try(tcl("image","create","photo", imageID,file=value), silent=TRUE)
                     if(inherits(x,"try-error")) {
                       message(gettext("Only gif and pnm files are possible in gWidgetstcltk\n"))
